tree-sitter-rgbasm/identifier/test/corpus/format_string.txt
================================================================================
Format string: x
================================================================================
{x:x}
---

(input
  (global
    (interpolation
      (format_string)
      (global))))

================================================================================
Format string: X
================================================================================
{X:x}
---

(input
  (global
    (interpolation
      (format_string)
      (global))))

================================================================================
Format string: exact s padded
================================================================================
{#10s:{x}}
---

(input
  (global
    (interpolation
      (format_string)
      (global
        (interpolation
          (global))))))

================================================================================
Format string: plus
================================================================================
{+d:{x}}
---

(input
  (global
    (interpolation
      (format_string)
      (global
        (interpolation
          (global))))))
