tree-sitter-rgbasm/identifier/test/corpus/identifier.txt
================================================================================
Global
================================================================================
main
---

(input
  (global))

================================================================================
Qualified
================================================================================
main.loop
---

(input
  (qualified
    (global)
    (local)))

================================================================================
Local
================================================================================
.loop
---

(input
  (local))

================================================================================
Raw
================================================================================
#if
---

(input
  (global
    (raw_marker)))

================================================================================
Raw Qualified
================================================================================
#if.loop
---

(input
  (qualified
    (global
      (raw_marker))
    (local)))

================================================================================
Raw Local (no effect)
================================================================================
.loop#if
---

(input
  (local))

================================================================================
Keyword as local
================================================================================
.if
---

(input
  (local))

================================================================================
Error: Keyword as global
:error
================================================================================
if
---

(input
  (ERROR))

================================================================================
Error: Keyword as qualified global
================================================================================
if.loop
---

(input
  (ERROR)
  (local))
